<resources>

    <string name="pickerview_cancel">取消</string>
    <string name="pickerview_submit">确定</string>
    <string name="pickerview_year">年</string>
    <string name="pickerview_month">月</string>
    <string name="pickerview_day">日</string>
    <string name="pickerview_hours">时</string>
    <string name="pickerview_minutes">分</string>
    <string name="pickerview_seconds">秒</string>
    <string name="sans_serif" translatable="false">sans-serif</string>
    <string name="pickerview_date">日期</string>
    <string name="pickerview_date_range">时间段</string>
    <string name="pickerview_start_date_label">起始时间</string>
    <string name="pickerview_end_date_label">结束时间</string>
    <string name="pickerview_sunday">日</string>
    <string name="pickerview_monday">一</string>
    <string name="pickerview_tuesday">二</string>
    <string name="pickerview_wednesday">三</string>
    <string name="pickerview_thursday">四</string>
    <string name="pickerview_friday">五</string>
    <string name="pickerview_saturday">六</string>
</resources>
