<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rv_topbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@color/color_F4F4F6">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dp_16"
            android:textColor="@color/color_272C32"
            android:textSize="@dimen/pickerview_topbar_title_textsize"
            android:textStyle="bold"
            tools:text="标题" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_date_range"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/dp_14">

            <TextView
                android:id="@+id/tv_start_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_12"
                android:gravity="center"
                android:minWidth="@dimen/dp_60"
                android:text="-"
                android:textColor="@color/color_63676B"
                android:textSize="@dimen/sp_12"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/label_start_date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/label_start_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pickerview_start_date_label"
                android:textColor="@color/color_989A9D"
                android:textSize="@dimen/sp_10"
                app:layout_constraintEnd_toEndOf="@+id/tv_start_date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_start_date" />

            <View
                android:id="@+id/lien_date"
                android:layout_width="@dimen/dp_12"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/dp_12"
                android:background="#C3C6CC"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_start_date"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_end_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_12"
                android:layout_marginTop="@dimen/dp_12"
                android:gravity="center"
                android:minWidth="@dimen/dp_60"
                android:text="-"
                android:textColor="@color/color_63676B"
                android:textSize="@dimen/sp_12"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/label_end_date"
                app:layout_constraintStart_toEndOf="@+id/lien_date"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/label_end_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pickerview_end_date_label"
                android:textColor="@color/color_989A9D"
                android:textSize="@dimen/sp_10"
                app:layout_constraintEnd_toEndOf="@+id/tv_end_date"
                app:layout_constraintStart_toStartOf="@+id/tv_end_date"
                app:layout_constraintTop_toBottomOf="@+id/tv_end_date" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@color/color_ffffff"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_pre_month"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="@dimen/dp_16"
            android:src="@mipmap/icon_left" />

        <TextView
            android:id="@+id/tv_year_month"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/color_63676B"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold"
            tools:text="2020年4月" />

        <ImageView
            android:id="@+id/iv_next_month"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="@dimen/dp_16"
            android:src="@mipmap/icon_right" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/color_E8ECF2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:background="@color/color_ffffff"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/pickerview_sunday"
            android:textColor="@color/color_63676B"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/pickerview_monday"
            android:textColor="@color/color_63676B"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/pickerview_tuesday"
            android:textColor="@color/color_63676B"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/pickerview_wednesday"
            android:textColor="@color/color_63676B"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/pickerview_thursday"
            android:textColor="@color/color_63676B"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/pickerview_friday"
            android:textColor="@color/color_63676B"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/pickerview_saturday"
            android:textColor="@color/color_63676B"
            android:textSize="@dimen/sp_16" />

    </LinearLayout>

    <com.panyz.pos_pickview.calendar.DayPickerView
        android:id="@+id/day_pick_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_ffffff"
        android:overScrollMode="never"
        app:colorSelectedDayBackground="@color/color_0078FF"
        app:drawRoundRect="true"
        app:headerMonthHeight="0dp" />

    <include layout="@layout/include_bottom_view" />

</LinearLayout>